@@ -1,7 +1,19 @@
 #! /bin/sh
+#
+# Copyright 2012, 2013 Free Software Foundation, Inc.
+#
+# This file is free software; as a special exception the author gives
+# unlimited permission to copy and/or distribute it, with or without
+# modifications, as long as this notice is preserved.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
+# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+#
+# Originally written by Patrice Dumas.
 
 if test "z$TEX_HTML_TESTS" != z'yes'; then
-  echo "Skipping HTML TeX tests that are not easily reproducible"
+  echo "Skipping HTML TeX tests that are not easily reproducible ($0)"
   exit 77
 fi
 
@@ -31,7 +43,7 @@ echo "$basename" > $logfile
 
 tmp_dir=`mktemp -d l2h_t2h_XXXXXXXX`
 if test z"$tmp_dir" = 'z' ; then
-  echo "mktemp failed" 1>&2
+  echo "$0: mktemp failed" 1>&2
   exit 1
 fi
 
